<resources>
	<string name="app_short_name">Firezone</string>

	<!-- Resources -->
	<string name="resources_favorites">Favorites</string>
	<string name="resources_all">All</string>

	<!-- Settings -->
	<string name="settings_title">Settings</string>
	<string name="save">Save</string>
	<!-- General Settings -->
	<string name="general_settings_title">General</string>
	<string name="account_slug">Account Slug</string>
	<string name="start_on_login">Start on Boot</string>
	<string name="connect_on_start">Connect on Start</string>
	<!-- Advanced Settings -->
	<string name="advanced_settings_title">Advanced</string>
	<string name="auth_url">Auth URL</string>
	<string name="api_url">API URL</string>
	<string name="log_filter">Log Filter</string>
	<string name="button_reset_to_defaults">Reset to Defaults</string>
	<!-- Diagnostic Logs Settings -->
	<string name="x509_settings_title">X.509</string>
	<string name="log_settings_title">Logs</string>
	<string name="share_diagnostic_logs">Export Logs</string>
	<string name="log_directory_size">Log directory size: %1$s</string>
	<string name="clear_log_directory">Clear Log Directory</string>

	<!-- Client Certificate -->
	<string name="x509_certificate_title">Client certificate</string>
	<string name="x509_no_certificate_title">No client certificate</string>
	<string name="x509_issued_by">Issued by %1$s</string>
	<string name="x509_valid_until">Valid until %1$s</string>
	<string name="x509_explainer_present">Firezone uses this certificate to identify this device.</string>
	<string name="x509_explainer_absent">Firezone did not find a certificate to identify this device.</string>
	<string name="x509_explainer_unusable">Firezone cannot use this certificate to identify this device.</string>
	<string name="x509_select_certificate">Select Certificate</string>
	<string name="x509_selection_title">Select your client certificate</string>
	<string name="x509_selection_description">
		Firezone signs you in with a certificate from the system KeyChain, and Android only releases
		it once you choose it. You are asked this once: Android remembers your choice.
	</string>
	<string name="x509_forget_certificate">Forget Selection</string>
	<string name="x509_loading">Reading the KeyChain…</string>
	<string name="x509_no_certificate_selected">No RSA or EC certificate was selected.</string>
	<string name="x509_not_released">
		Android has not released this certificate to Firezone. Selecting it grants access.
	</string>
	<string name="x509_error_title">Unable to read the client certificate</string>
	<string name="x509_unusable_title">Firezone will not present this certificate</string>
	<string name="x509_contact_admin">Contact your administrator for support.</string>
	<string name="x509_claim_absent">Not present</string>
	<string name="x509_claim_empty">Empty</string>
	<string name="x509_claim_too_long">Longer than 255 characters</string>
	<string name="x509_claim_not_an_email_address">Not a valid email address</string>
	<string name="x509_claim_not_a_uuid">Not a UUID</string>
	<string name="x509_claim_ambiguous">More than one value was given</string>
	<string name="x509_claim_placeholder_identifier">Placeholder identifier</string>
	<string name="x509_claim_unknown_attribute">Unrecognised attribute</string>
	<string name="x509_rule_no_client_auth_eku">
		Firezone only presents a certificate that allows TLS client authentication.
	</string>
	<string name="x509_rule_no_digital_signature_key_usage">
		Firezone only presents a certificate whose key usage allows digital signatures.
	</string>
	<string name="x509_rule_not_yet_valid">This certificate is not valid yet.</string>
	<string name="x509_rule_expired">This certificate has expired.</string>
	<string name="x509_rule_unsupported_key_algorithm">Firezone cannot sign with this key algorithm.</string>
	<string name="x509_rule_refused_identity">Firezone cannot identify the user this certificate names.</string>
	<string name="x509_rule_unreadable">Firezone could not read this certificate.</string>

	<!-- Sign In -->
	<string name="sign_in">Sign In</string>
	<string name="connect">Connect</string>
	<string name="connect_as">Connect as %1$s</string>
	<string name="settings">Settings</string>
	<string name="sign_in_welcome">Welcome to Firezone.</string>
	<string name="sign_in_prompt">Sign in to access Resources.</string>

	<!-- Sign Out -->
	<string name="resources">Resources</string>
	<string name="connected_devices">Connected Devices</string>
	<string name="sign_out">Sign Out</string>
	<string name="disconnect">Disconnect</string>
	<string name="connected_as">Connected as %1$s</string>

	<!-- Profile -->
	<string name="profile">Profile</string>
	<string name="signed_in">Signed in</string>

	<!-- Auth -->
	<string name="launching_auth_flow">Launching Browser to sign in…</string>

	<!-- Error Dialog -->
	<string name="error_dialog_title">Error</string>
	<string name="error_dialog_message_browser_required">
		Please install a browser to sign in to Firezone.
	</string>
	<string name="error_dialog_message_invalid_certificate">
		A certificate has been configured but it is invalid. Please contact your administrator.
	</string>
	<string name="error_dialog_button_text">Ok</string>
	<string name="enable_vpn_permission">Enable VPN Permission</string>
	<string name="vpn_permission_description">
		Firezone requires the VPN permission in order to route packets from your device to protected
		resources in a secure manner. All communication is end-to-end encrypted; we can never
		decrypt or otherwise monitor your communication. Please grant the VPN permission by tapping
		the button below.
	</string>
	<string name="request_permission">Request Permission</string>
	<string name="enable_notification_permission">Enable Notifications</string>
	<string name="notification_permission_description">
		Firezone can send notifications to keep you informed about your connection status.
		This helps you know when you\'re connected to resources and if any issues occur.
		You can change this later in your device settings.
	</string>
	<string name="skip">Skip</string>

	<!-- Managed Configuration -->
	<string name="config_token_title">Token</string>
	<string name="config_token_description">
		The token used for authentication.
		Set this to a service account token to enable headless operation.
	</string>
	<string name="config_allowed_applications_title">Allowed Applications</string>
	<string name="config_allowed_applications_description">
		A comma-separated list of application package IDs that are allowed to use the Firezone
		tunnel. If this list is empty, all applications are allowed. Either "Allowed Applications"
		OR "Disallowed Applications" may be set *but not* both.
	</string>
	<string name="config_disallowed_applications_title">Disallowed Applications</string>
	<string name="config_disallowed_applications_description">A comma-separated list of application
		package IDs that are disallowed to use the Firezone tunnel and will be routed outside of it.
		If this list is empty, no applications are disallowed. Either "Allowed Applications" OR
		"Disallowed Applications" may be set *but not* both.
	</string>
	<string name="config_device_name_title">Device Name</string>
	<string name="config_device_name_description">
		The name of the device. This is used to identify the device in the admin portal.
		If unset, device\'s model name will be used.
	</string>
	<string name="config_auth_url_title">Auth URL</string>
	<string name="config_auth_url_description">
		The base URL used for authentication. If unset, the default of https://app.firezone.dev will
		be used. The account slug will be appended to this URL.
	</string>
	<string name="config_api_url_title">API URL</string>
	<string name="config_api_url_description">
		The WebSocket URL used to connect to the Firezone control plane. If unset, the default of
	    wss://api.firezone.dev will be used.
	</string>
	<string name="config_log_filter_title">Log Filter</string>
	<string name="config_log_filter_description">
		A RUST_LOG-formatted filter string used to control the verbosity of the connectivity library
		logging. If unset, the default of "info" will be used.
	</string>
	<string name="config_account_slug_title">Account Slug</string>
	<string name="config_account_slug_description">
		The account ID or slug of the Firezone account to authenticate to. If unset, no account slug
		will be used, and the user will need to enter it manually on the first sign in attempt. Upon
		subsequent sign ins, the account slug will be automatically populated.
	</string>
	<string name="config_start_on_login_title">Start on Boot</string>
	<string name="config_start_on_login_description">
		Whether Firezone should automatically try to connect when the device boots up.
	</string>
	<string name="config_connect_on_start_title">Connect on Start</string>
	<string name="config_connect_on_start_description">
		Whether Firezone should automatically try to connect when the app is launched.
	</string>
	<string name="config_x509_certificate_alias_title">Client Certificate Alias</string>
	<string name="config_x509_certificate_alias_description">
		The system KeyChain alias of the client certificate used for mutual TLS. The device policy
		controller must install the key pair and grant dev.firezone.android access to it. Leave
		empty to disable certificate authentication.
	</string>

	<string name="managed_setting_info_description">
		This setting is being managed by your organization.
	</string>
</resources>
