<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/settingsGeneral"
        android:icon="@drawable/rounded_discover_tune_black_24dp"
        android:title="@string/general_settings_title" />

    <item
        android:id="@+id/settingsAdvanced"
        android:icon="@drawable/rounded_settings_black_24dp"
        android:title="@string/advanced_settings_title" />

    <item
        android:id="@+id/settingsX509"
        android:icon="@drawable/rounded_verified_user_black_24dp"
        android:title="@string/x509_settings_title" />

    <item
        android:id="@+id/settingsLogs"
        android:icon="@drawable/rounded_description_black_24dp"
        android:title="@string/log_settings_title" />

</menu>
