<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_medium"
    tools:context=".features.permission.vpn.ui.VpnPermissionActivity"
    android:fitsSystemWindows="true">

  <androidx.appcompat.widget.LinearLayoutCompat
      android:id="@+id/llContainer"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/iv_logo_size"
        android:layout_height="@dimen/iv_logo_size"
        android:src="@drawable/ic_firezone_logo" />

    <com.google.android.material.textview.MaterialTextView
        style="@style/AppTheme.Base.HeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_small"
        android:gravity="center"
        android:text="@string/app_short_name" />

  </androidx.appcompat.widget.LinearLayoutCompat>

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/tvHeaderTitle"
      style="@style/AppTheme.Base.H5"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:text="@string/enable_vpn_permission"
      app:layout_constraintTop_toBottomOf="@id/llContainer"
      app:layout_constraintStart_toStartOf="parent" />

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/tvBody"
      style="@style/AppTheme.Base.Body1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="12dp"
      android:text="@string/vpn_permission_description"
      app:layout_constraintTop_toBottomOf="@id/tvHeaderTitle"
      app:layout_constraintStart_toStartOf="parent" />

  <com.google.android.material.button.MaterialButton
      android:id="@+id/btnRequest"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/request_permission"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
