<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_medium"
    android:fitsSystemWindows="true">

    <!-- Display Log Directory Size -->
    <TextView
        android:id="@+id/tvLogDirectorySize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/log_directory_size"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Button to Clear Log Directory -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btClearLog"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/clear_log_directory"
        app:icon="@drawable/rounded_delete_black_24dp"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLogDirectorySize" />

    <!-- Button to Share Logs -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btShareLog"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/share_diagnostic_logs"
        app:icon="@drawable/rounded_share_black_24dp"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btClearLog" />

</androidx.constraintlayout.widget.ConstraintLayout>
