<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:padding="@dimen/spacing_medium"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ilAccountSlugInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivAccountSlugInfo"> <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etAccountSlugInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_slug"
            android:importantForAutofill="no"
            android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ivAccountSlugInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:padding="@dimen/spacing_extra_small"
            android:src="@drawable/info_24px"  android:contentDescription="@string/managed_setting_info_description"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ilAccountSlugInput"
            app:layout_constraintBottom_toBottomOf="@+id/ilAccountSlugInput" />


        <FrameLayout
            android:id="@+id/flStartOnLoginWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_1x"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ilAccountSlugInput"> <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchStartOnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_on_login" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/flConnectOnStartWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_1x"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flStartOnLoginWrapper">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchConnectOnStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect_on_start" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>