<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacing_medium">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLogo"
            android:layout_width="@dimen/iv_logo_size"
            android:layout_height="@dimen/iv_logo_size"
            android:src="@drawable/ic_firezone_logo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvHeaderTitle"
            style="@style/AppTheme.Base.HeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_small"
            android:gravity="center"
            android:text="@string/app_short_name" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvResourcesList"
        style="@style/AppTheme.Base.H5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resources"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llContainer" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvResourcesList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvResourcesList"
        app:layout_constraintBottom_toTopOf="@id/btSignOut" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSignOut"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
